Update dockerfile